bigger padding left and right, fix button size on mobile

--- a/src/style/guidelines.css
+++ b/src/style/guidelines.css
@@ -134,3 +134,8 @@
     p { font-size: 12px; line-height: 18px; }
   
 }
+
+.container {
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
+}
